# SeahorseDB

./: .gitmodules  README.md  docker-compose.yaml  seahorsedb.conf
api_server/: README.md
db_engine/: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-entrypoint.sh
db_engine/src/: acl.c  aof.c  asciilogo.h  bitops.c  cli_common.c  cluster.c  cluster.h  commands.c  commands.def  config.c  config.h  connection.h  crc64.h  db.c  debug.c  eval.c  evict.c  fmacros.h  function_lua.c  geo.c  latency.c  lazyfree.c  lolwut.c  lolwut5.c  lolwut6.c  mkreleasehdr.sh  module.c  multi.c  networking.c  object.c  rdb.c  rdb.h  redis-benchmark.c  redis-check-aof.c  redis-check-rdb.c  redis-cli.c  release.c  replication.c  rio.c  rio.h  (+18 more)
db_engine/src/commands/: unwatch.json  vdb-count-aof-rewrites.json  vdb-load.json  vdb-metrics-clear.json  vdb-metrics-print.json  vdb-metrics.json  vdb-save.json  vdb-systemlog-enabled-topics.json  vdb-systemlog-reset-all-topics.json  vdb-systemlog-reset-topics.json  vdb-systemlog-set-all-topics.json  vdb-systemlog-set-default-topics.json  vdb-systemlog-set-topics.json  vdb-systemlog-test.json  vdb-systemlog.json  vdb-table-ann.json  vdb-table-batch-ann.json  vdb-table-batch-insert.json  vdb-table-checkindexing.json  vdb-table-count-records.json  vdb-table-countindexedelements.json  vdb-table-create.json  vdb-table-debug-scan.json  vdb-table-delete.json  vdb-table-describe-internal.json  vdb-table-describe.json  vdb-table-drop.json  vdb-table-fetch-next.json  vdb-table-insert.json  vdb-table-list.json  vdb-table-scan-internal.json  vdb-table-scan-open-internal.json  vdb-table-scan-open.json  vdb-table-scan.json  vdb-table-segmentstatistics.json  vdb-table-update.json  vdb-table.json  vdb-total-record-count.json  vdb-total-table-count.json  vdb-unload.json  (+1 more)
db_engine/src/input/: metric.input  system_log_topic.input
db_engine/src/vdb/: vdb.hh  vdb_api.cc  vdb_api.hh  vdb_command_impl.cc
db_engine/src/vdb/common/: common_guards.hh  defs.hh  fd_manager.cc  fd_manager.hh  json_validator.cc  json_validator.hh  memory_allocator.cc  memory_allocator.hh  server_configuration.cc  server_configuration.hh  spinlock.cc  spinlock.hh  status.cc  status.hh  system_log.cc  system_log.hh  util.cc  util.hh
db_engine/src/vdb/compute/: execution.cc  execution.hh
db_engine/src/vdb/data/: checker.cc  checker.hh  checker_registry.cc  checker_registry.hh  embedding_store.cc  embedding_store.hh  expression.cc  expression.hh  index_handler.cc  index_handler.hh  index_info.cc  index_info.hh  label_info.hh  metadata.hh  metadata_checker.cc  mutable_array.hh  primary_key.cc  primary_key.hh  primary_key_index.cc  primary_key_index.hh  segmentation.cc  segmentation.hh  statistics_collector.cc  statistics_collector.hh  table.cc  table.hh
db_engine/src/vdb/index/hnsw/: bruteforce.hh  hnsw.hh
db_engine/src/vdb/index/hnsw/common/: filter.hh  interface.hh  visited_list_pool.hh
db_engine/src/vdb/metrics/: metric.hh  metric_info.cc  metric_info.hh  metrics.cc  metrics.hh  metrics_api.cc  metrics_api.hh  metrics_collection.cc  metrics_collection.hh  performance_monitor.cc  performance_monitor.hh  timer.cc  timer.hh
db_engine/src/vdb/tests/: allocator_tests.cc  base_environment.hh  command_tests.cc  data_structure_tests.cc  expression_tests.cc  index_handler_tests.cc  index_tests.cc  metric_tests.cc  rollback_tests.cc  segment_tests.cc  snapshot_tests.cc  systemlog_tests.cc  template_tests.cc  util_for_test.cc  util_for_test.hh  util_tests.cc  xxhash_tests.cc
db_engine/src/vdb/vector/common/: params.hh  simd_header.hh
db_engine/src/vdb/vector/distance/: space_header.hh  space_ip_float32.hh  space_l2_float32.hh
